--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.0",
     "expo": "~51.0.20",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "^0.74.3",
+    "react-native-blur": "^3.2.2",
+    "react-native-gesture-handler": "^2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-responsive-screen": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
